# django_oai_pmh

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yaml  Makefile  README.md  __init__.py  admin.py  apps.py  fields.py  models.py  pyproject.toml  requirements.txt  settings.py  setup.py  signals.py  tests.py  urls.py  views.py
.github/workflows/: django.yml  pypi.yml  release.yml
django_oai_pmh/: __init__.py  admin.py  apps.py  models.py  settings.py  signals.py  tests.py  urls.py  views.py
django_oai_pmh/migrations/: 0001_initial.py  0002_set.py  0003_header.py  0004_resumptiontoken.py  0005_dcrecord.py  0005_oaidc_metadataformat.py  0006_xmlrecord.py  0007_alter_dcrecord_date.py  0008_alter_dcrecord_contributor_alter_dcrecord_coverage_and_more.py  __init__.py
django_oai_pmh/templates/django_oai_pmh/: base.xml  error.xml  getrecord.xml  identify.xml  listidentifiers.xml  listmetadataformats.xml  listrecords.xml  listsets.xml
django_oai_pmh/templates/django_oai_pmh/partials/: _record.xml
django_oai_pmh/templates/oai_pmh/: error.xml  listidentifiers.xml
django_oai_pmh/templatetags/: __init__.py  oai_pmh.py
migrations/: 0001_initial.py  0002_set.py  0003_header.py  0004_resumptiontoken.py  0005_dcrecord.py  0005_oaidc_metadataformat.py  0006_xmlrecord.py
templates/oai_pmh/: base.xml  error.xml  getrecord.xml  listmetadataformats.xml  listrecords.xml  listsets.xml
templates/oai_pmh/partials/: _header.xml  _oai_dc.xml  _record.xml  _xmlrecord.xml
templatetags/: oai_pmh.py
