[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "django_oai_pmh"
version = "0.3.8"
authors = [
    {name = "J. Nathanael Philipp", email = "nathanael@philipp.land"}
]
description="Add OAI-PMH endpoint to Django."
readme = "README.md"
license = {text = "GPLv3+"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["dependencies"]
keywords = ["django", "OAI-PMH"]


[project.urls]
"Homepage" = "http://github.com/jnphilipp/django_oai_pmh"
"Bug Tracker" = "http://github.com/jnphilipp/django_oai_pmh/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"*" = ["*.xml"]
